--- a/html/speakers.html
+++ b/html/speakers.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="../css/footer-mobile.css">
     <link rel="stylesheet" href="../css/panels-mobile.css">
     <script src="../js/jquery-3.2.1.min.js"></script>
-    <title>PWCS 2018 | Home Page</title>
+    <title>PWCS 2018 | Speakers Page</title>
   </head>
   <body>
 
@@ -118,7 +118,7 @@
     <div class="section-full header">
       <div class="left-square"></div>
       <div class="page-caption black-shadow">
-        PANELS <br/> 分论坛
+        SPEAKERS <br/> 
       </div>
       <div class="bottom-square">
         <div class="row">
@@ -134,7 +134,7 @@
       TODO: NEW SECTIONS HERE
     -->
 
-    
+
 
     <!--
       MARK: Section (TEMP) - Maintenance
