--- a/html/agenda.html
+++ b/html/agenda.html
@@ -32,7 +32,7 @@
       gtag('js', new Date());
       gtag('config', 'UA-108713232-1');
     </script>
-    <title>PWCS 2018 | Panels</title>
+    <title>PWCS 2018 | Agenda</title>
   </head>
   <body>
 
@@ -151,7 +151,7 @@
         To Build the Bridge Between Us
       </div>
       <div class="page-caption black-shadow">
-         SIX <br/> PANELS
+         2018 <br/> AGENDA
       </div>
       <div class="bottom-square">
         <div class="row">
