--- a/html/speakers.html
+++ b/html/speakers.html
@@ -325,7 +325,7 @@
             </div>
           </div>
             <div class="col">
-              <div class="image_container2 TadSmith">
+              <div class="image_container2 TadSmith generic-speaker-img">
               </div>
               <div class="caption">
                 <div class="name">
