--- a/html/agenda.html
+++ b/html/agenda.html
@@ -9,12 +9,12 @@
     <link rel="stylesheet" href="../css/navbar.css">
     <link rel="stylesheet" href="../css/header.css">
     <link rel="stylesheet" href="../css/footer.css">
-    <link rel="stylesheet" href="../css/home.css">
+    <link rel="stylesheet" href="../css/agenda.css">
     <link rel="stylesheet" href="../css/global-mobile.css">
     <link rel="stylesheet" href="../css/navbar-mobile.css">
     <link rel="stylesheet" href="../css/header-mobile.css">
     <link rel="stylesheet" href="../css/footer-mobile.css">
-    <link rel="stylesheet" href="../css/home-mobile.css">
+    <link rel="stylesheet" href="../css/agenda-mobile.css">
     <!-- Favicons -->
     <link rel="icon" type="image/png" href="../assets/favicons/favicon-196x196.png" sizes="196x196" />
     <link rel="icon" type="image/png" href="../assets/favicons/favicon-96x96.png" sizes="96x96" />
@@ -158,6 +158,219 @@
           <div class="col-10 white-txt crimson-bg ls-1" style="letter-spacing: 3px;">REGISTER</div>
           <div class="col-2 white-bg action-area">
             <a href="#section-temp" class="black-txt"><i class="icofont icofont-dotted-right"></i></a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!--
+      MARK: content
+    -->
+
+    <div class="section-free">
+      <div class="row">
+        <div class="col-12 col-md-4 center-txt">
+          <h2 class="agenda-date">April 13th</h2>
+          <div class="agenda-item left-txt">
+            <div class="item-time">
+              4:00PM - 6:00PM
+            </div>
+            <div class="item-title">
+              Media Conference
+            </div>
+            <div class="item-location">
+              Hilton Inn At Penn
+            </div>
+            <div class="item-desc">
+              Hosted by PWCS and Representatives from the Wharton School. An opportunity for media to ask questions.
+            </div>
+          </div>
+          <div class="agenda-item left-txt">
+            <div class="item-time">
+              5:30PM - 8:00PM
+            </div>
+            <div class="item-title">
+              Career Fair
+            </div>
+            <div class="item-location">
+              Hilton Inn at Penn
+            </div>
+            <div class="item-desc">
+              Company Representatives to set up booths. Open to registered audience.
+            </div>
+          </div>
+          <div class="agenda-item left-txt">
+            <div class="item-time">
+              6:00PM - 7:30PM
+            </div>
+            <div class="item-title">
+              Career Advising Panel
+            </div>
+            <div class="item-location">
+              Hilton Inn at Penn
+            </div>
+            <div class="item-desc">
+              Hosted by PWCS, Liepin.com, and representative from China Telecom North America Branch.
+            </div>
+          </div>
+          <div class="agenda-item left-txt">
+            <div class="item-time">
+              6:30PM - 9:00PM
+            </div>
+            <div class="item-title">
+              VIP Banquet
+            </div>
+            <div class="item-location">
+              Huntsman Hall
+            </div>
+            <div class="item-desc">
+              A Dinner Hosted by PWCS and the Wharton School to thank our distinguished guests and partners
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-md-4 center-txt">
+          <h2 class="agenda-date">April 14th</h2>
+          <div class="agenda-item left-txt">
+            <div class="item-time">
+              8:00AM - 10:00AM
+            </div>
+            <div class="item-title">
+              General Registration
+            </div>
+            <div class="item-location">
+              Houston Hall Bodek Lounge
+            </div>
+            <div class="item-desc">
+              Audience to register and pick up summit brochure, name tags, and souvenir.
+            </div>
+          </div>
+          <div class="agenda-item left-txt">
+            <div class="item-time">
+              9:00AM - 11:30AM
+            </div>
+            <div class="item-title">
+              Openning Ceremony
+            </div>
+            <div class="item-location">
+              Irvine Auditorium
+            </div>
+            <div class="item-desc">
+              (Content Updating)
+            </div>
+          </div>
+          <div class="agenda-item left-txt">
+            <div class="item-time">
+              12:30PM - 2:30PM
+            </div>
+            <div class="item-title">
+              PANEL 1: Real Estate
+            </div>
+            <div class="item-location">
+              Irvine Auditorium
+            </div>
+            <div class="item-desc">
+              (Content Updating)
+            </div>
+            <div class="item-title">
+              PANEL 2: New Technology
+            </div>
+            <div class="item-location">
+              Annenburg Center
+            </div>
+            <div class="item-desc">
+              (Content Updating)
+            </div>
+          </div>
+          <div class="agenda-item left-txt">
+            <div class="item-time">
+              3:00PM - 5:00PM
+            </div>
+            <div class="item-title">
+              PANEL 3: Entertainment
+            </div>
+            <div class="item-location">
+              Irvine Auditorium
+            </div>
+            <div class="item-desc">
+              (Content Updating)
+            </div>
+            <div class="item-title">
+              PANEL 4: International Relations
+            </div>
+            <div class="item-location">
+              Annenburg Center
+            </div>
+            <div class="item-desc">
+              (Content Updating)
+            </div>
+          </div>
+          <div class="agenda-item left-txt">
+            <div class="item-time">
+              7:00PM - 9:00PM
+            </div>
+            <div class="item-title">
+              INNOTALK Entreprenuership Panel
+            </div>
+            <div class="item-location">
+              Annenberg Center
+            </div>
+            <div class="item-desc">
+              (Content Updating)
+            </div>
+          </div>
+          <div class="agenda-item left-txt">
+            <div class="item-time">
+              9:00PM - 11:00PM
+            </div>
+            <div class="item-title">
+              Social Event
+            </div>
+            <div class="item-location">
+              Marriott Downtown
+            </div>
+            <div class="item-desc">
+              (Content Updating)
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-md-4 center-txt">
+          <h2 class="agenda-date">April 15th</h2>
+          <div class="agenda-item left-txt">
+            <div class="item-time">
+              10:00AM - 12:00PM
+            </div>
+            <div class="item-title">
+              PANEL 3: Entertainment
+            </div>
+            <div class="item-location">
+              Irvine Auditorium
+            </div>
+            <div class="item-desc">
+              (Content Updating)
+            </div>
+            <div class="item-title">
+              PANEL 4: International Relations
+            </div>
+            <div class="item-location">
+              Annenburg Center
+            </div>
+            <div class="item-desc">
+              (Content Updating)
+            </div>
+          </div>
+          <div class="agenda-item left-txt">
+            <div class="item-time">
+              1:30PM - 3:30PM
+            </div>
+            <div class="item-title">
+              Closing Ceremony
+            </div>
+            <div class="item-location">
+              Irvine Auditorium
+            </div>
+            <div class="item-desc">
+              (Content Updating)
+            </div>
           </div>
         </div>
       </div>
