--- a/html/past.html
+++ b/html/past.html
@@ -9,12 +9,12 @@
     <link rel="stylesheet" href="../css/navbar.css">
     <link rel="stylesheet" href="../css/header.css">
     <link rel="stylesheet" href="../css/footer.css">
-    <link rel="stylesheet" href="../css/home.css">
+    <link rel="stylesheet" href="../css/past.css">
     <link rel="stylesheet" href="../css/global-mobile.css">
     <link rel="stylesheet" href="../css/navbar-mobile.css">
     <link rel="stylesheet" href="../css/header-mobile.css">
     <link rel="stylesheet" href="../css/footer-mobile.css">
-    <link rel="stylesheet" href="../css/home-mobile.css">
+    <link rel="stylesheet" href="../css/past-mobile.css">
     <!-- Favicons -->
     <link rel="icon" type="image/png" href="../assets/favicons/favicon-196x196.png" sizes="196x196" />
     <link rel="icon" type="image/png" href="../assets/favicons/favicon-96x96.png" sizes="96x96" />
@@ -158,6 +158,90 @@
           <div class="col-10 white-txt crimson-bg ls-1" style="letter-spacing: 3px;">REGISTER</div>
           <div class="col-2 white-bg action-area">
             <a href="#section-temp" class="black-txt"><i class="icofont icofont-dotted-right"></i></a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!--
+      MARK: content
+    -->
+
+    <!-- MARK: TRACY! -->
+
+    <div class="white-bg" id="whitebox">
+      <div class="row row-eq-height">
+        <div class="col-lg-5 col-sm-12 col-xs-12">
+          <h1 class="year-title">2017</h1>
+          <h1 class="slogan-title">
+            <span>the World to China: </span>Challenges in Supply Side Reform<br>
+            <span>China to the World: </span>Integration in Globalization Strategy</h1>
+        </div>
+        <div class="col-lg-7 col-sm-12 hidden-xs">
+          <div class="row">
+            <div class="col-lg-12 col-sm-6 year-desc">
+              <p>The 2017 Summit aimed to build the
+              United States’ most influential exchange
+              platform for overseas elites by inviting
+              leaders from all walks of life to shed
+              light on the developmental prospects of
+              Chinese enterprises, and to divulge the
+              many opportunities as China found its
+              place on the global track.</p>
+              <p>We invited a number of distinguished guests
+              from all walks of life to converse with elite
+              Chinese and American students at the second
+              Penn Wharton China Summit. These leaders
+              talked about the opportunities in global
+              strategic integration and the challenges
+              brought by the supply-side reform with
+              respect to the seven major sections topics/
+              themes of real estate, healthcare, financial
+              markets, culture and the arts, business reform,
+              science and technology, and education.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-12 col-sm-12 col-xs-12">
+          <h1 id="whycome">PAST SPEAKERS</h1>
+        </div>
+      </div>
+    </div>
+
+    <div class="row no-gutters white-bg">
+      <div class="col-lg-6 col-sm-12 col-xs-12">
+        <div id="redbox">
+          <div class="row">
+
+
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-6 col-sm-12 col-xs-12">
+        <div id="blackbox">
+          <div class="row">
+
+
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="white-bg" id="whitebox" style="padding-bottom: 5%;">
+      <div class="row row-eq-height">
+        <div class="col-lg-5 col-sm-12 col-xs-12">
+          <h1 class="year-title">2016</h1>
+          <h1 class="slogan-title">
+            <span>China's New Normal: </span><br/>The Next Engine of Growth<br>
+        </div>
+        <div class="col-lg-7 col-sm-12 hidden-xs">
+          <div class="row">
+            <div class="col-lg-12 col-sm-6 year-desc">
+              <p>After decades of high-speed growth, China's economy is running out of steam. Traditional drivers including export, infrastructure investment and real estate are losing their momentum. In response, the Chinese Central Bank has slashed interest rates, but the effect is limited by the not-quite-liberalized nature of China’s financial system. The Government is additionally wary of fiscal stimulus because local government debt has grown to dangerous levels. In other words, the old period of high speed growth is over, and China's economy is entering a ‘New Normal’. </p>
+              <p>Going forward, everyone, from government officials to businessmen, academics to investors, is looking for the next driver of growth. Is it innovation and entrepreneurship in tech sector, or a booming entertainment and media industry? Will it be the liberalization in the financial system, or reform in state-owned Enterprises? </p>
+            </div>
           </div>
         </div>
       </div>
