fix navbar and hheader

--- a/html/speakers.html
+++ b/html/speakers.html
@@ -71,68 +71,51 @@
     <!--
       MARK: (TODO) Navigation Menu
     -->
-
     <div class="fixed-full" id="menu-container">
-      <div class="row">
-        <div class="col-12 col-md-5">
-          <h1>Menu</h1>
+      <div class="vertical-center">
+        <div class="row center-txt">
+          <div class="col-12">
+            <a href="#"><div class="navigation-action-btn">Register</div></a>
+          </div>
         </div>
-        <div class="mobile-hide col-md-7 row nav-socials">
-          <div class="col-3">
-            <div class="nav-social-item">
+        <div class="row">
+          <div class="col-12 col-md-12 row menu-items">
+            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item active-item" id="item-0"> <a href="./home.html" class="active-item">Home</a> <i class="icofont icofont-dotted-left"></i> </div>
+            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-4"> <a href="./about.html">About</a> </div>
+            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-1"> <a href="./panels.html">Panels</a> </div>
+            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-2"> <a href="./panels.html">Speakers</a> </div>
+            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-3"> <a href="./agenda.html">Agenda</a> </div>
+            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-3"> <a href="./past.html">Past</a> </div>
+          </div>
+        </div>
+        <div class="row center-txt">
+          <div class="col-4 offset-2 col-md-2 offset-md-2 center-txt">
+            <div class="nav-social-item center-txt">
               <a href="https://www.hotmail.com">
-              <i class="icofont icofont-social-facebook"></i>
+                <i class="icofont icofont-social-facebook"></i>
               </a>
             </div>
           </div>
-          <div class="col-3">
-            <div class="nav-social-item">
+          <div class="col-4 col-md-2 center-txt">
+            <div class="nav-social-item center-txt">
               <a href="https://www.hotmail.com">
-              <i class="icofont icofont-social-wechat"></i>
+                <i class="icofont icofont-social-wechat"></i>
               </a>
             </div>
           </div>
-          <div class="col-3">
-            <div class="nav-social-item">
+          <div class="col-4 offset-2 col-md-2 offset-md-0 center-txt">
+            <div class="nav-social-item center-txt">
               <a href="https://www.hotmail.com">
                 <i class="icofont icofont-social-weibo"></i>
               </a>
             </div>
           </div>
-          <div class="col-3">
-            <div class="nav-social-item">
+          <div class="col-4 col-md-2 center-txt">
+            <div class="nav-social-item center-txt">
               <a href="https://www.hotmail.com">
                 <i class="icofont icofont-email"></i>
               </a>
             </div>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-12 col-md-5 offset-md-0 row left-txt">
-          <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item active-item" id="item-0"> <a href="./home.html" class="active-item">Home</a> <i class="icofont icofont-dotted-left"></i> </div>
-          <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-4"> <a href="./about.html">About</a> </div>
-          <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-1"> <a href="./panels.html">Panels</a> </div>
-          <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-2"> <a href="./speakers.html">Speakers</a> </div>
-          <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-3"> <a href="./agenda.html">Agenda</a> </div>
-          <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-3"> <a href="./past.html">Past</a> </div>
-          <div class="col-12 navigation-action-btn"> <a href="#">Register</a> </div>
-        </div>
-        <div class="mobile-hide col-md-7 row">
-          <div class="col-12 navigation-desc active-desc" id="desc-0">
-            Stay Tuned, Our Site is Under Maintenance
-          </div>
-          <div class="col-12 navigation-desc" id="desc-1">
-            My Panels
-          </div>
-          <div class="col-12 navigation-desc" id="desc-2">
-            My Speakers
-          </div>
-          <div class="col-12 navigation-desc" id="desc-3">
-            My Partnership
-          </div>
-          <div class="col-12 navigation-desc" id="desc-4">
-            My About
           </div>
         </div>
       </div>
