--- a/html/about.html
+++ b/html/about.html
@@ -219,8 +219,8 @@
     </div>
   </div>
 </div>
-<div class="row no-gutters white-bg">
-  <div class="col-lg-6 col-sm-12 col-xs-12">
+<div class="row no-gutters white-bg row-eq-height">
+  <div class="col-lg-6 col-sm-12 col-xs-12 crimson-bg flex">
     <div id="redbox">
       <div class="row">
         <div class="strip">
@@ -231,49 +231,47 @@
         <div class="col-lg-2 col-sm-2 col-xs-2 number">01</div>
         <div class="col-lg-10 col-sm-10 col-xs-10 text">
 
-          <h4>It's time to level up</h4>
-          <p class="white-paragraph">level up level up level up level up level up level up
-            level up level up level up level up level up level up
-            level up level up level up level up level up level up
-            level up level up level up level up level up level up
-            level up level up level up level up level up level up</p>
+          <h4>A Global Outlook</h4>
+          <p class="white-paragraph">Napoleon once said, “China is a sleeping giant.
+            Let her sleep, for when she wakes, she will shake the World.”
+            Today, “China” is all over the news. The giant is finally waking up,
+            but what kind of power will it unleash upon the rest of the world?
+            Come see for yourself.</p>
         </div>
       </div>
-      <div class="row">
+      <div class="row mid-pos">
         <div class="strip">
           <img src="../assets/images/black.png">
         </div>
       </div>
-      <div class="row">
+      <div class="row mid-rs">
         <div class="col-lg-2 col-sm-2 col-xs-2 number">02</div>
         <div class="col-lg-10 col-sm-10 col-xs-10 text">
-          <h4>Deepen our understanding</h4>
-          <p class="white-paragraph">level up level up level up level up level up level up
-            level up level up level up level up level up level up
-            level up level up level up level up level up level up
-            level up level up level up level up level up level up
-            level up level up level up level up level up level up</p>
+          <h4>Bigger Names, Deeper Insights</h4>
+          <p class="white-paragraph">Our distinguished guests come from all
+            walks of life. They are the best in their fields, and are here to
+            share their personal experiences throughout their journeys. This
+            is a not-to-be-missed opportunity to learn from the best.</p>
         </div>
       </div>
-      <div class="row">
+      <div class="row last-pos">
         <div class="strip">
           <img src="../assets/images/black.png">
         </div>
       </div>
-      <div class="row">
+      <div class="row last-rs">
         <div class="col-lg-2 col-sm-2 col-xs-2 number">03</div>
         <div class="col-lg-10 col-sm-10 col-xs-10 text">
-          <h4>It's time to level up</h4>
-          <p class="white-paragraph">level up level up level up level up level up level up
-            level up level up level up level up level up level up
-            level up level up level up level up level up level up
-            level up level up level up level up level up level up
-            level up level up level up level up level up level up</p>
+          <h4>Going Beyond</h4>
+          <p class="white-paragraph">Whether you are interested in starting the
+            next Facebook, hoping to land a dream job, or excited about how
+            online auctions work, our wonderful side events will allow you to
+            make the most out of your PWCS experience.</p>
         </div>
       </div>
     </div>
   </div>
-  <div class="col-lg-6 col-sm-12 col-xs-12">
+  <div class="col-lg-6 col-sm-12 col-xs-12 black-bg flex">
     <div id="blackbox">
       <div class="row">
         <div class="strip">
@@ -283,44 +281,40 @@
       <div class="row">
         <div class="col-lg-2 col-sm-2 col-xs-2 number">04</div>
         <div class="col-lg-10 col-sm-10 col-xs-10 text">
-          <h4 class="white-txt">It's time to level up</h4>
-          <p class="white-paragraph">level up level up level up level up level up level up
-            level up level up level up level up level up level up
-            level up level up level up level up level up level up
-            level up level up level up level up level up level up
-            level up level up level up level up level up level up</p>
+          <h4 class="white-txt">The Wharton Experience</h4>
+          <p class="white-paragraph">PWCS is endorsed by Wharton, one of the
+            most prestigious business schools in the world. Come see for
+            yourself what this world-class business school is all about.</p>
         </div>
       </div>
-      <div class="row">
+      <div class="row mid-pos">
         <div class="strip">
           <img src="../assets/images/red.png">
         </div>
       </div>
-      <div class="row">
+      <div class="row mid-rs">
         <div class="col-lg-2 col-sm-2 col-xs-2 number">05</div>
         <div class="col-lg-10 col-sm-10 col-xs-10 text">
-          <h4 class="white-txt">Deepen our understanding</h4>
-          <p class="white-paragraph">level up level up level up level up level up level up
-            level up level up level up level up level up level up
-            level up level up level up level up level up level up
-            level up level up level up level up level up level up
-            level up level up level up level up level up level up</p>
+          <h4 class="white-txt">Completely Student-run Summit</h4>
+          <p class="white-paragraph">PWCS is run by a group of passionate students.
+            We have made a name for ourselves from past summits, and we can’t wait
+            to show you what we are capable of in our greatest Summit ever.</p>
         </div>
       </div>
-      <div class="row">
+      <div class="row last-pos">
         <div class="strip">
           <img src="../assets/images/red.png">
         </div>
       </div>
-      <div class="row">
+      <div class="row last-rs">
         <div class="col-lg-2 col-sm-2 col-xs-2 number">06</div>
         <div class="col-lg-10 col-sm-10 col-xs-10 text">
-          <h4 class="white-txt">It's time to level up</h4>
-          <p class="white-paragraph">level up level up level up level up level up level up
-            level up level up level up level up level up level up
-            level up level up level up level up level up level up
-            level up level up level up level up level up level up
-            level up level up level up level up level up level up</p>
+          <h4 class="white-txt">Explore Philadelphia</h4>
+          <p class="white-paragraph">From Independence Hall, Liberty Bell, to the
+            good old Ben Franklin, Philadelphia is a beautiful city of rich
+            history and culture. Did we mention its vibrancy yet? Don’t miss
+            out on the opportunity to explore the city that bred the winner
+            of the 2018 Super Bowl. Let’s go Eagles!</p>
         </div>
       </div>
     </div>
